--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,24 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    ​
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/materialup.appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         >
-        ​
+
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/main.collapsing"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="150dp"
             app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleMarginStart="50dp"
+            app:expandedTitleMarginEnd="65dp"
             app:layout_scrollFlags="scroll|snap"
             >
-            ​
+
             <ImageView
                 android:id="@+id/materialup.profile_backdrop"
                 android:layout_width="match_parent"
@@ -30,33 +30,21 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/material_flat"
                 app:layout_collapseMode="parallax"
-                />
+                android:contentDescription="@string/logo_description"/>
         </android.support.design.widget.CollapsingToolbarLayout>
-        ​
-        <de.hdodenhof.circleimageview.CircleImageView
+
+        <ImageView
             android:id="@+id/materialup.profile_image"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:layout_marginTop="-48dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="-50dp"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/logo"
-            android:elevation="8dp"
-            app:border_width="2dp"
-            app:border_color="#FFF"
+            android:elevation="10dp"
             app:layout_scrollFlags="scroll"
+            android:scaleType="centerCrop"
             />
-        ​
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/materialup.toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="?attr/actionBarSize"
-            android:background="?colorPrimary"
-            android:layout_marginTop="-48dp"
-            app:theme="@style/ThemeOverlay.AppCompat.Light"
-            app:layout_scrollFlags="scroll|enterAlways|snap"
-            />
-        ​
+
         <LinearLayout
             android:id="@+id/materialup.title_container"
             android:layout_width="match_parent"
@@ -64,43 +52,45 @@
             android:orientation="vertical"
             android:gravity="center"
             app:layout_scrollFlags="scroll|enterAlways|snap"
-            >
-            ​
+            android:baselineAligned="false">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-                android:text="@string/appname"
+                android:text="@string/title"
                 />
-            ​
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
-                android:text="@string/disclaimer"
+                android:text="@string/subtitle"
                 android:textColor="@android:color/white"
                 />
-            ​
+
         </LinearLayout>
-        ​
+
         <android.support.design.widget.TabLayout
             android:id="@+id/materialup.tabs"
             android:layout_width="fill_parent"
             android:layout_height="?attr/actionBarSize"
             app:tabSelectedTextColor="?android:attr/textColorPrimaryInverse"
             app:tabIndicatorColor="?android:attr/textColorPrimaryInverse"
+            android:background="?android:selectableItemBackground"
             app:tabIndicatorHeight="4dp"
-            />
+            app:theme="@style/TabBarAppearance"
+            style="@style/TabBarAppearance"/>
     </android.support.design.widget.AppBarLayout>
-    ​
+
     <!-- The top margin value equals half height of the blue box -->
     <android.support.v4.view.ViewPager
         android:id="@+id/materialup.viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         />
-    ​
+
 </android.support.design.widget.CoordinatorLayout>
