--- a/app/src/main/res/layout/list_item_card.xml
+++ b/app/src/main/res/layout/list_item_card.xml
@@ -4,15 +4,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="270dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginBottom="4dp"
-    android:layout_marginTop="4dp"
+    android:layout_height="wrap_content"
+    android:layout_marginRight="20dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp"
     app:cardCornerRadius="4dp">
 
+
     <TextView
-        android:paddingLeft="5dp"
+        android:layout_margin="5dp"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginTop="2dp"
