--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,24 +1,18 @@
 <resources>
-    <color name="brand_primary">#3E50B4</color>
-    <color name="brand_primary_dark">#3646A8</color>
-    <color name="brand_accent">#FE3E80</color>
-
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/brand_primary</item>
         <item name="colorPrimaryDark">@color/brand_primary_dark</item>
         <item name="colorAccent">@color/brand_accent</item>
     </style>
 
-    <style name="AppTheme.SimpleCoordinatorTheme">
-<!--        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>-->
-    </style>
-
     <style name="CollapsingTextAppearance" parent="Base.TextAppearance.AppCompat.Widget.ActionBar.Title"/>
     <style name="CollapsingTextAppearance.Inverse" >
         <item name="android:textSize">30sp</item>
     </style>
+    
+    <style name="TabBarAppearance" parent="Widget.AppCompat.Toolbar">
 
+    </style>
 
     <style name="TextComponent"/>
 
