--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,14 @@
     >
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/materialup.appbar"
+        android:id="@+id/meet_appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         >
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/main.collapsing"
+            android:id="@+id/meet_main_collapsing"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             app:contentScrim="?attr/colorPrimary"
@@ -24,7 +24,7 @@
             >
 
             <ImageView
-                android:id="@+id/materialup.profile_backdrop"
+                android:id="@+id/meet_backdrop_img"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
@@ -33,48 +33,59 @@
                 android:contentDescription="@string/logo_description"/>
         </android.support.design.widget.CollapsingToolbarLayout>
 
-        <ImageView
-            android:id="@+id/materialup.profile_image"
+
+        <RelativeLayout
+	        android:id="@+id/meet_relative_logo"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="-50dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/logo"
-            android:elevation="10dp"
-            app:layout_scrollFlags="scroll"
-            android:scaleType="centerCrop"
-            />
+            app:layout_scrollFlags="scroll">
+
+            <ImageView
+                android:id="@+id/meet_logo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/logo"
+                android:elevation="10dp"
+                android:scaleType="centerCrop"/>
+
+        </RelativeLayout>
 
         <LinearLayout
-            android:id="@+id/materialup.title_container"
+            android:id="@+id/meet_title_container"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             app:layout_scrollFlags="scroll|enterAlways|snap"
             android:baselineAligned="false">
 
+
             <TextView
+	            android:id="@+id/meet_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                android:layout_marginTop="2dp"
                 android:text="@string/title"
-                android:id="@+id/title"/>
+                />
 
             <TextView
+	            android:id="@+id/meet_subtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="2dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                 android:text="@string/subtitle"
                 android:textColor="@android:color/white"
-                android:id="@+id/subtitle"/>
+                />
 
         </LinearLayout>
 
         <android.support.design.widget.TabLayout
-            android:id="@+id/materialup.tabs"
+            android:id="@+id/meet_tabs"
             android:layout_width="fill_parent"
             android:layout_height="?attr/actionBarSize"
             app:tabSelectedTextColor="?android:attr/textColorPrimaryInverse"
@@ -85,9 +96,8 @@
             style="@style/TabBarAppearance"/>
     </android.support.design.widget.AppBarLayout>
 
-    <!-- The top margin value equals half height of the blue box -->
     <android.support.v4.view.ViewPager
-        android:id="@+id/materialup.viewpager"
+        android:id="@+id/meet_viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
